dotnetimages/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dottnetimage
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 2
  selector:
    matchLabels:
      app: dottnetimage
  template:
    metadata:
      labels:
        app: dottnetimage
    spec:
      containers:
      - name: dottnetimage
      image: sammy.azurecr.io/dottnetimage:1.0.0
      ports:
       - containerPort: 80
      resources:
        requests:
          cpu: "100m" 
        limits:
         cpu: "300m" 
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /readiness
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
