dotnetimages/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-1-web
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 2
  selector:
    matchLabels:
      app: dotnet-1-web
  template:
    metadata:
      labels:
        app: dotnet-1-web
    spec:
      containers:
      - name: dotnetimage
        image: probe1.azurecr.io/dottnetimage
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m" 
          limits:
            cpu: "300m" 
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /readiness
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
