dotnetimages/deployprobe.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-1-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnet-1-web
  template:
    metadata:
      labels:
        app: dotnet-1-web
    spec:
      containers:
      - name: dotnet-1-web
        image: probe1.azurecr.io/dotnet-1-web:latest
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
          requests:
            cpu: "0.5"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /readiness
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
