dotnetimages/probe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image:  yasmeenmaligeli/dotnet-1-web:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"      # Request 100 milliCPU (0.1 CPU)
            memory: "128Mi"  # Request 128 MiB of memory
          limits:
            cpu: "300m"      # Limit the container to a maximum of 300 milliCPU (0.3 CPU)
            memory: "256Mi"  # Limit the container to a maximum of 256 MiB of memory
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /readiness
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
