dotnetimages/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: yasmeen
spec:
  selector:
    app: myapp
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
